k8s-kustomize/services/order-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-api
  template:
    metadata:
      labels:
        app: order-api
    spec:
      containers:
        - image: order-api # must much from ./kustomization.yaml -> images[0].name
          imagePullPolicy: IfNotPresent
          name: order-api
          ports:
            - containerPort: 8090
          readinessProbe:
            httpGet:
              path: /order/q/health/ready
              port: 8090
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /order/q/health/live
              port: 8090
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              memory: "32Mi"
              cpu: "60m"
            limits:
              memory: "128Mi"
              cpu: "100m"
