k8s-kustomize/services/order-api/base/order-pgsql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-pgsql-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-pgsql-database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: order-pgsql-database
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: orderdb
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              name: order-api
              key: db.password
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              name: order-api
              key: db.username
        image: postgres:alpine
        imagePullPolicy: IfNotPresent
        name: pgsql
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: order-database-data
        resources:
          requests:
            memory: "512Mi"
            cpu: ".5"
          limits:
            memory: "1Gi"
            cpu: "1"
      restartPolicy: Always
      volumes:
      - name: order-database-data
        persistentVolumeClaim:
          claimName: order-database-data
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order-pgsql-database
  name: order-pgsql-database
spec:
  type: LoadBalancer
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: order-pgsql-database
