k8s-kustomize/services/order-api/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: order-api
spec:
  parentRefs:
  - kind: Gateway
    name: gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /order
    backendRefs:
    - name: order-api
      port: 80
